tests/NormalTests/paczka1/fuzzy1/94553264.err
Error in line 6: hNm A475 37,2
Error in line 10: ogA1 A475 66,3
Error in line 15: A475 A475 62,8
Error in line 34: hNm S884 72,7
